--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-#razorpay.key.id=<your razorpay-key-id>
-razorpay.key.id=rzp_test_damILfDssLwsZg
-#razorpay.key.secret=<your secret>
-razorpay.key.secret=kCDDWcMRUyz5nh6NQ1Ohiz62
+razorpay.key.id=<your razorpay-key-id>
+razorpay.key.secret=<your secret>
